fix: Cell gap

--- a/src/cell.less
+++ b/src/cell.less
@@ -1,8 +1,16 @@
 .cell {
   margin-bottom: 5px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 .unit {
   display: inline-block;
   vertical-align: top;
   margin-right: 5px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
